--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
   <body>
 
     <div class="container">
-      <h2>D3 Stuff</h2>
+      <h2>D3 Barchart</h2>
       <div id="chart"></div>
     </div>
-    <script type="text/javascript" src="./script.js"></script>
+
+    <div class="container2">
+      <h2>D3 Piechart</h2>
+      <div id="chart2"></div>
+    </div>
+
+    <script type="text/javascript" src="./barchart.js"></script>
+    <script type="text/javascript" src="./piechart.js"></script>
 
   </body>
 </html>
