added force graph and comments

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       <div id="chart"></div>
     </div>
 
+    <div class="container3">
+      <h2>D3 Force Chart</h2>
+      <div id="chart3"></div>
+    </div>
+
     <div class="container2">
       <h2>D3 Piechart</h2>
       <div id="chart2"></div>
@@ -22,6 +27,7 @@
 
     <script type="text/javascript" src="./barchart.js"></script>
     <script type="text/javascript" src="./piechart.js"></script>
+    <script type="text/javascript" src="./force.js"></script>
 
   </body>
 </html>
